@@ -31,143 +31,134 @@ import java.util.Hashtable;
 import java.util.Vector;
 
 /**
- * A JSONObject is an unordered collection of name/value pairs. Its
- * external form is a string wrapped in curly braces with colons between the
- * names and values, and commas between the values and names. The internal form
- * is an object having <code>get</code> and <code>opt</code> methods for
- * accessing the values by name, and <code>put</code> methods for adding or
- * replacing values by name. The values can be any of these types:
- * <code>Boolean</code>, <code>JSONArray</code>, <code>JSONObject</code>,
- * <code>Number</code>, <code>String</code>, or the <code>JSONObject.NULL</code>
- * object. A JSONObject constructor can be used to convert an external form
- * JSON text into an internal form whose values can be retrieved with the
- * <code>get</code> and <code>opt</code> methods, or to convert values into a
- * JSON text using the <code>put</code> and <code>toString</code> methods.
- * A <code>get</code> method returns a value if one can be found, and throws an
- * exception if one cannot be found. An <code>opt</code> method returns a
- * default value instead of throwing an exception, and so is useful for
- * obtaining optional values.
+ * A JSONObject is an unordered collection of name/value pairs. Its external form is a string
+ * wrapped in curly braces with colons between the names and values, and commas between the values
+ * and names. The internal form is an object having <code>get</code> and <code>opt</code> methods
+ * for accessing the values by name, and <code>put</code> methods for adding or replacing values by
+ * name. The values can be any of these types: <code>Boolean</code>, <code>JSONArray</code>,
+ * <code>JSONObject</code>, <code>Number</code>, <code>String</code>, or the
+ * <code>JSONObject.NULL</code> object. A JSONObject constructor can be used to convert an external
+ * form JSON text into an internal form whose values can be retrieved with the <code>get</code> and
+ * <code>opt</code> methods, or to convert values into a JSON text using the <code>put</code> and
+ * <code>toString</code> methods. A <code>get</code> method returns a value if one can be found, and
+ * throws an exception if one cannot be found. An <code>opt</code> method returns a default value
+ * instead of throwing an exception, and so is useful for obtaining optional values.
  * <p>
- * The generic <code>get()</code> and <code>opt()</code> methods return an
- * object, which you can cast or query for type. There are also typed
- * <code>get</code> and <code>opt</code> methods that do type checking and type
- * coersion for you.
+ * The generic <code>get()</code> and <code>opt()</code> methods return an object, which you can
+ * cast or query for type. There are also typed <code>get</code> and <code>opt</code> methods that
+ * do type checking and type coersion for you.
  * <p>
- * The <code>put</code> methods adds values to an object. For example, <pre>
- *     myString = new JSONObject().put("JSON", "Hello, World!").toString();</pre>
+ * The <code>put</code> methods adds values to an object. For example,
+ *
+ * <pre>
+ * myString = new JSONObject().put("JSON", "Hello, World!").toString();
+ * </pre>
+ *
  * produces the string <code>{"JSON": "Hello, World"}</code>.
  * <p>
- * The texts produced by the <code>toString</code> methods strictly conform to
- * the JSON sysntax rules.
- * The constructors are more forgiving in the texts they will accept:
+ * The texts produced by the <code>toString</code> methods strictly conform to the JSON sysntax
+ * rules. The constructors are more forgiving in the texts they will accept:
  * <ul>
- * <li>An extra <code>,</code>&nbsp;<small>(comma)</small> may appear just
- *     before the closing brace.</li>
- * <li>Strings may be quoted with <code>'</code>&nbsp;<small>(single
- *     quote)</small>.</li>
- * <li>Strings do not need to be quoted at all if they do not begin with a quote
- *     or single quote, and if they do not contain leading or trailing spaces,
- *     and if they do not contain any of these characters:
- *     <code>{ } [ ] / \ : , = ; #</code> and if they do not look like numbers
- *     and if they are not the reserved words <code>true</code>,
- *     <code>false</code>, or <code>null</code>.</li>
- * <li>Keys can be followed by <code>=</code> or <code>=></code> as well as
- *     by <code>:</code>.</li>
- * <li>Values can be followed by <code>;</code> <small>(semicolon)</small> as
- *     well as by <code>,</code> <small>(comma)</small>.</li>
- * <li>Numbers may have the <code>0-</code> <small>(octal)</small> or
- *     <code>0x-</code> <small>(hex)</small> prefix.</li>
- * <li>Comments written in the slashshlash, slashstar, and hash conventions
- *     will be ignored.</li>
+ * <li>An extra <code>,</code>&nbsp;<small>(comma)</small> may appear just before the closing
+ * brace.</li>
+ * <li>Strings may be quoted with <code>'</code>&nbsp;<small>(single quote)</small>.</li>
+ * <li>Strings do not need to be quoted at all if they do not begin with a quote or single quote,
+ * and if they do not contain leading or trailing spaces, and if they do not contain any of these
+ * characters: <code>{ } [ ] / \ : , = ; #</code> and if they do not look like numbers and if they
+ * are not the reserved words <code>true</code>, <code>false</code>, or <code>null</code>.</li>
+ * <li>Keys can be followed by <code>=</code> or <code>=></code> as well as by <code>:</code>.</li>
+ * <li>Values can be followed by <code>;</code> <small>(semicolon)</small> as well as by
+ * <code>,</code> <small>(comma)</small>.</li>
+ * <li>Numbers may have the <code>0-</code> <small>(octal)</small> or <code>0x-</code>
+ * <small>(hex)</small> prefix.</li>
+ * <li>Comments written in the slashshlash, slashstar, and hash conventions will be ignored.</li>
  * </ul>
+ *
  * @author JSON.org
  * @version 2
  */
 public class JSONObject {
 
     /**
-     * JSONObject.NULL is equivalent to the value that JavaScript calls null,
-     * whilst Java's null is equivalent to the value that JavaScript calls
-     * undefined.
+     * JSONObject.NULL is equivalent to the value that JavaScript calls null, whilst Java's null is
+     * equivalent to the value that JavaScript calls undefined.
      */
-     private static final class Null {
+    private static final class Null {
 
         /**
-         * There is only intended to be a single instance of the NULL object,
-         * so the clone method returns itself.
-         * @return     NULL.
+         * There is only intended to be a single instance of the NULL object, so the clone method returns
+         * itself.
+         *
+         * @return NULL.
          */
-        protected final Object clone() {
+        @Override
+        protected Object clone() {
             return this;
         }
 
-
         /**
          * A Null object is equal to the null value and to itself.
-         * @param object    An object to test for nullness.
-         * @return true if the object parameter is the JSONObject.NULL object
-         *  or null.
+         *
+         * @param object An object to test for nullness.
+         * @return true if the object parameter is the JSONObject.NULL object or null.
          */
-        public boolean equals(Object object) {
+        @Override
+        public boolean equals(final Object object) {
             return object == null || object == this;
         }
 
-
         /**
          * Get the "null" string value.
+         *
          * @return The string "null".
          */
+        @Override
         public String toString() {
             return "null";
         }
     }
 
-
     /**
      * The hash map where the JSONObject's properties are kept.
      */
-    private Hashtable myHashMap;
-
+    private Hashtable<Object, Object> myHashMap;
 
     /**
-     * It is sometimes more convenient and less ambiguous to have a
-     * <code>NULL</code> object than to use Java's <code>null</code> value.
-     * <code>JSONObject.NULL.equals(null)</code> returns <code>true</code>.
-     * <code>JSONObject.NULL.toString()</code> returns <code>"null"</code>.
+     * It is sometimes more convenient and less ambiguous to have a <code>NULL</code> object than to use
+     * Java's <code>null</code> value. <code>JSONObject.NULL.equals(null)</code> returns
+     * <code>true</code>. <code>JSONObject.NULL.toString()</code> returns <code>"null"</code>.
      */
     public static final Object NULL = new Null();
-
 
     /**
      * Construct an empty JSONObject.
      */
     public JSONObject() {
-        this.myHashMap = new Hashtable();
+        myHashMap = new Hashtable<>();
     }
 
-
     /**
-     * Construct a JSONObject from a subset of another JSONObject.
-     * An array of strings is used to identify the keys that should be copied.
-     * Missing keys are ignored.
+     * Construct a JSONObject from a subset of another JSONObject. An array of strings is used to
+     * identify the keys that should be copied. Missing keys are ignored.
+     *
      * @param jo A JSONObject.
      * @param sa An array of strings.
      * @exception JSONException If a value is a non-finite number.
      */
-    public JSONObject(JSONObject jo, String[] sa) throws JSONException {
+    public JSONObject(final JSONObject jo, final String[] sa) throws JSONException {
         this();
-        for (int i = 0; i < sa.length; i += 1) {
-            putOpt(sa[i], jo.opt(sa[i]));
+        for (final String element : sa) {
+            putOpt(element, jo.opt(element));
         }
     }
 
-
     /**
      * Construct a JSONObject from a JSONTokener.
+     *
      * @param x A JSONTokener object containing the source string.
      * @throws JSONException If there is a syntax error in the source string.
      */
-    public JSONObject(JSONTokener x) throws JSONException {
+    public JSONObject(final JSONTokener x) throws JSONException {
         this();
         char c;
         String key;
@@ -221,102 +212,92 @@ public class JSONObject {
         }
     }
 
-
     /**
      * Construct a JSONObject from a Map.
-     * @param map A map object that can be used to initialize the contents of
-     *  the JSONObject.
+     *
+     * @param map A map object that can be used to initialize the contents of the JSONObject.
      */
-    public JSONObject(Hashtable map) {
+    public JSONObject(final Hashtable map) {
         if (map == null) {
-            this.myHashMap = new Hashtable();
+            myHashMap = new Hashtable();
         } else {
-            this.myHashMap = new Hashtable(map.size());
-            Enumeration keys = map.keys();
+            myHashMap = new Hashtable(map.size());
+            final Enumeration keys = map.keys();
             while (keys.hasMoreElements()) {
-                Object key = keys.nextElement();
-                this.myHashMap.put(key, map.get(key));
+                final Object key = keys.nextElement();
+                myHashMap.put(key, map.get(key));
             }
         }
     }
-    
-    
+
     /**
-     * Construct a JSONObject from a string.
-     * This is the most commonly used JSONObject constructor.
-     * @param string    A string beginning
-     *  with <code>{</code>&nbsp;<small>(left brace)</small> and ending
-     *  with <code>}</code>&nbsp;<small>(right brace)</small>.
+     * Construct a JSONObject from a string. This is the most commonly used JSONObject constructor.
+     *
+     * @param string A string beginning with <code>{</code>&nbsp;<small>(left brace)</small> and ending
+     *               with <code>}</code>&nbsp;<small>(right brace)</small>.
      * @exception JSONException If there is a syntax error in the source string.
      */
-    public JSONObject(String string) throws JSONException {
+    public JSONObject(final String string) throws JSONException {
         this(new JSONTokener(string));
     }
 
-
     /**
-     * Accumulate values under a key. It is similar to the put method except
-     * that if there is already an object stored under the key then a
-     * JSONArray is stored under the key to hold all of the accumulated values.
-     * If there is already a JSONArray, then the new value is appended to it.
-     * In contrast, the put method replaces the previous value.
+     * Accumulate values under a key. It is similar to the put method except that if there is already an
+     * object stored under the key then a JSONArray is stored under the key to hold all of the
+     * accumulated values. If there is already a JSONArray, then the new value is appended to it. In
+     * contrast, the put method replaces the previous value.
+     *
      * @param key   A key string.
      * @param value An object to be accumulated under the key.
      * @return this.
-     * @throws JSONException If the value is an invalid number
-     *  or if the key is null.
+     * @throws JSONException If the value is an invalid number or if the key is null.
      */
-    public JSONObject accumulate(String key, Object value)
-            throws JSONException {
+    public JSONObject accumulate(final String key, final Object value) throws JSONException {
         testValidity(value);
-        Object o = opt(key);
+        final Object o = opt(key);
         if (o == null) {
             put(key, value);
         } else if (o instanceof JSONArray) {
-            ((JSONArray)o).put(value);
+            ((JSONArray) o).put(value);
         } else {
             put(key, new JSONArray().put(o).put(value));
         }
         return this;
     }
 
-
     /**
-     * Append values to the array under a key. If the key does not exist in the
-     * JSONObject, then the key is put in the JSONObject with its value being a
-     * JSONArray containing the value parameter. If the key was already
-     * associated with a JSONArray, then the value parameter is appended to it.
+     * Append values to the array under a key. If the key does not exist in the JSONObject, then the key
+     * is put in the JSONObject with its value being a JSONArray containing the value parameter. If the
+     * key was already associated with a JSONArray, then the value parameter is appended to it.
+     *
      * @param key   A key string.
      * @param value An object to be accumulated under the key.
      * @return this.
-     * @throws JSONException If the key is null or if the current value 
-     * 	associated with the key is not a JSONArray.
+     * @throws JSONException If the key is null or if the current value associated with the key is not a
+     *                       JSONArray.
      */
-    public JSONObject append(String key, Object value)
-            throws JSONException {
+    public JSONObject append(final String key, final Object value) throws JSONException {
         testValidity(value);
-        Object o = opt(key);
+        final Object o = opt(key);
         if (o == null) {
             put(key, new JSONArray().put(value));
         } else if (o instanceof JSONArray) {
-            throw new JSONException("JSONObject[" + key + 
-            		"] is not a JSONArray.");
+            throw new JSONException("JSONObject[" + key + "] is not a JSONArray.");
         } else {
             put(key, new JSONArray().put(o).put(value));
         }
         return this;
     }
 
-
     /**
-     * Produce a string from a double. The string "null" will be returned if
-     * the number is not finite.
-     * @param  d A double.
+     * Produce a string from a double. The string "null" will be returned if the number is not finite.
+     *
+     * @param d A double.
      * @return A String.
      */
-    static public String doubleToString(double d) {
+    static public String doubleToString(final double d) {
         if (Double.isInfinite(d) || Double.isNaN(d)) {
-        	return "null";
+            return "null";
         }
 
 // Shave off trailing zeros and decimal point, if possible.
@@ -333,213 +314,187 @@ public class JSONObject {
         return s;
     }
 
-
     /**
      * Get the value object associated with a key.
      *
-     * @param key   A key string.
-     * @return      The object associated with the key.
-     * @throws   JSONException if the key is not found.
+     * @param key A key string.
+     * @return The object associated with the key.
+     * @throws JSONException if the key is not found.
      */
-    public Object get(String key) throws JSONException {
-        Object o = opt(key);
+    public Object get(final String key) throws JSONException {
+        final Object o = opt(key);
         if (o == null) {
-            throw new JSONException("JSONObject[" + quote(key) +
-                    "] not found.");
+            throw new JSONException("JSONObject[" + quote(key) + "] not found.");
         }
         return o;
     }
 
-
     /**
      * Get the boolean value associated with a key.
      *
-     * @param key   A key string.
-     * @return      The truth.
-     * @throws   JSONException
-     *  if the value is not a Boolean or the String "true" or "false".
+     * @param key A key string.
+     * @return The truth.
+     * @throws JSONException if the value is not a Boolean or the String "true" or "false".
      */
-    public boolean getBoolean(String key) throws JSONException {
-        Object o = get(key);
-        if (o.equals(Boolean.FALSE) ||
-                (o instanceof String &&
-                ((String)o).equalsIgnoreCase("false"))) {
+    public boolean getBoolean(final String key) throws JSONException {
+        final Object o = get(key);
+        if (o.equals(Boolean.FALSE) || o instanceof String && ((String) o).equalsIgnoreCase("false")) {
             return false;
-        } else if (o.equals(Boolean.TRUE) ||
-                (o instanceof String &&
-                ((String)o).equalsIgnoreCase("true"))) {
+        } else if (o.equals(Boolean.TRUE) || o instanceof String && ((String) o).equalsIgnoreCase("true")) {
             return true;
         }
-        throw new JSONException("JSONObject[" + quote(key) +
-                "] is not a Boolean.");
+        throw new JSONException("JSONObject[" + quote(key) + "] is not a Boolean.");
     }
-
 
     /**
      * Get the double value associated with a key.
-     * @param key   A key string.
-     * @return      The numeric value.
-     * @throws JSONException if the key is not found or
-     *  if the value is not a Number object and cannot be converted to a number.
+     *
+     * @param key A key string.
+     * @return The numeric value.
+     * @throws JSONException if the key is not found or if the value is not a Number object and cannot
+     *                       be converted to a number.
      */
-    public double getDouble(String key) throws JSONException {
-        Object o = get(key);
+    public double getDouble(final String key) throws JSONException {
+        final Object o = get(key);
         if (o instanceof Byte) {
-            return (double) ((Byte)o).byteValue();
+            return ((Byte) o).byteValue();
         } else if (o instanceof Short) {
-            return (double) ((Short)o).shortValue();
+            return ((Short) o).shortValue();
         } else if (o instanceof Integer) {
-            return (double) ((Integer)o).intValue();
+            return ((Integer) o).intValue();
         } else if (o instanceof Long) {
-            return (double) ((Long)o).longValue();
+            return ((Long) o).longValue();
         } else if (o instanceof Float) {
-            return (double) ((Float)o).floatValue();
+            return ((Float) o).floatValue();
         } else if (o instanceof Double) {
-            return ((Double)o).doubleValue();
+            return (Double) o;
         } else if (o instanceof String) {
             try {
-                return Double.valueOf((String)o).doubleValue();
-            } catch (Exception e) {
-                throw new JSONException("JSONObject[" + quote(key) +
-                    "] is not a number.");
+                return Double.parseDouble((String) o);
+            } catch (final Exception e) {
+                throw new JSONException("JSONObject[" + quote(key) + "] is not a number.");
             }
-        } 
-        throw new JSONException("JSONObject[" + quote(key) +
-            "] is not a number.");
+        }
+        throw new JSONException("JSONObject[" + quote(key) + "] is not a number.");
     }
-
 
     /**
-     * Get the int value associated with a key. If the number value is too
-     * large for an int, it will be clipped.
+     * Get the int value associated with a key. If the number value is too large for an int, it will be
+     * clipped.
      *
-     * @param key   A key string.
-     * @return      The integer value.
-     * @throws   JSONException if the key is not found or if the value cannot
-     *  be converted to an integer.
+     * @param key A key string.
+     * @return The integer value.
+     * @throws JSONException if the key is not found or if the value cannot be converted to an integer.
      */
-    public int getInt(String key) throws JSONException {
-        Object o = get(key);
+    public int getInt(final String key) throws JSONException {
+        final Object o = get(key);
         if (o instanceof Byte) {
-            return ((Byte)o).byteValue();
+            return ((Byte) o).byteValue();
         } else if (o instanceof Short) {
-            return ((Short)o).shortValue();
+            return ((Short) o).shortValue();
         } else if (o instanceof Integer) {
-            return ((Integer)o).intValue();
+            return (Integer) o;
         } else if (o instanceof Long) {
-            return (int) ((Long)o).longValue();
+            return (int) ((Long) o).longValue();
         } else if (o instanceof Float) {
-            return (int) ((Float)o).floatValue();
+            return (int) ((Float) o).floatValue();
         } else if (o instanceof Double) {
-            return (int) ((Double)o).doubleValue();
+            return (int) ((Double) o).doubleValue();
         } else if (o instanceof String) {
             return (int) getDouble(key);
-        } 
-        throw new JSONException("JSONObject[" + quote(key) +
-            "] is not a number.");
+        }
+        throw new JSONException("JSONObject[" + quote(key) + "] is not a number.");
     }
-
 
     /**
      * Get the JSONArray value associated with a key.
      *
-     * @param key   A key string.
-     * @return      A JSONArray which is the value.
-     * @throws   JSONException if the key is not found or
-     *  if the value is not a JSONArray.
+     * @param key A key string.
+     * @return A JSONArray which is the value.
+     * @throws JSONException if the key is not found or if the value is not a JSONArray.
      */
-    public JSONArray getJSONArray(String key) throws JSONException {
-        Object o = get(key);
+    public JSONArray getJSONArray(final String key) throws JSONException {
+        final Object o = get(key);
         if (o instanceof JSONArray) {
-            return (JSONArray)o;
+            return (JSONArray) o;
         }
-        throw new JSONException("JSONObject[" + quote(key) +
-                "] is not a JSONArray.");
+        throw new JSONException("JSONObject[" + quote(key) + "] is not a JSONArray.");
     }
-
 
     /**
      * Get the JSONObject value associated with a key.
      *
-     * @param key   A key string.
-     * @return      A JSONObject which is the value.
-     * @throws   JSONException if the key is not found or
-     *  if the value is not a JSONObject.
+     * @param key A key string.
+     * @return A JSONObject which is the value.
+     * @throws JSONException if the key is not found or if the value is not a JSONObject.
      */
-    public JSONObject getJSONObject(String key) throws JSONException {
-        Object o = get(key);
+    public JSONObject getJSONObject(final String key) throws JSONException {
+        final Object o = get(key);
         if (o instanceof JSONObject) {
-            return (JSONObject)o;
+            return (JSONObject) o;
         }
-        throw new JSONException("JSONObject[" + quote(key) +
-                "] is not a JSONObject.");
+        throw new JSONException("JSONObject[" + quote(key) + "] is not a JSONObject.");
     }
-
 
     /**
-     * Get the long value associated with a key. If the number value is too
-     * long for a long, it will be clipped.
+     * Get the long value associated with a key. If the number value is too long for a long, it will be
+     * clipped.
      *
-     * @param key   A key string.
-     * @return      The long value.
-     * @throws   JSONException if the key is not found or if the value cannot
-     *  be converted to a long.
+     * @param key A key string.
+     * @return The long value.
+     * @throws JSONException if the key is not found or if the value cannot be converted to a long.
      */
-    public long getLong(String key) throws JSONException {
-        Object o = get(key);
+    public long getLong(final String key) throws JSONException {
+        final Object o = get(key);
         if (o instanceof Byte) {
-            return ((Byte)o).byteValue();
+            return ((Byte) o).byteValue();
         } else if (o instanceof Short) {
-            return ((Short)o).shortValue();
+            return ((Short) o).shortValue();
         } else if (o instanceof Integer) {
-            return ((Integer)o).intValue();
+            return ((Integer) o).intValue();
         } else if (o instanceof Long) {
-            return ((Long)o).longValue();
+            return (Long) o;
         } else if (o instanceof Float) {
-            return (long) ((Float)o).floatValue();
+            return (long) ((Float) o).floatValue();
         } else if (o instanceof Double) {
-            return (long) ((Double)o).doubleValue();
+            return (long) ((Double) o).doubleValue();
         } else if (o instanceof String) {
             return (long) getDouble(key);
-        } 
-        throw new JSONException("JSONObject[" + quote(key) +
-            "] is not a number.");
+        }
+        throw new JSONException("JSONObject[" + quote(key) + "] is not a number.");
     }
-
 
     /**
      * Get the string associated with a key.
      *
-     * @param key   A key string.
-     * @return      A string which is the value.
-     * @throws   JSONException if the key is not found.
+     * @param key A key string.
+     * @return A string which is the value.
+     * @throws JSONException if the key is not found.
      */
-    public String getString(String key) throws JSONException {
+    public String getString(final String key) throws JSONException {
         return get(key).toString();
     }
 
-
     /**
      * Determine if the JSONObject contains a specific key.
-     * @param key   A key string.
-     * @return      true if the key exists in the JSONObject.
+     *
+     * @param key A key string.
+     * @return true if the key exists in the JSONObject.
      */
-    public boolean has(String key) {
-        return this.myHashMap.containsKey(key);
+    public boolean has(final String key) {
+        return myHashMap.containsKey(key);
     }
-
 
     /**
-     * Determine if the value associated with the key is null or if there is
-     *  no value.
-     * @param key   A key string.
-     * @return      true if there is no value associated with the key or if
-     *  the value is the JSONObject.NULL object.
+     * Determine if the value associated with the key is null or if there is no value.
+     *
+     * @param key A key string.
+     * @return true if there is no value associated with the key or if the value is the JSONObject.NULL
+     *         object.
      */
-    public boolean isNull(String key) {
+    public boolean isNull(final String key) {
         return JSONObject.NULL.equals(opt(key));
     }
-
 
     /**
      * Get an enumeration of the keys of the JSONObject.
@@ -547,9 +502,8 @@ public class JSONObject {
      * @return An iterator of the keys.
      */
     public Enumeration keys() {
-        return this.myHashMap.keys();
+        return myHashMap.keys();
     }
-
 
     /**
      * Get the number of keys stored in the JSONObject.
@@ -557,26 +511,23 @@ public class JSONObject {
      * @return The number of keys in the JSONObject.
      */
     public int length() {
-        return this.myHashMap.size();
+        return myHashMap.size();
     }
 
-
     /**
-     * Produce a JSONArray containing the names of the elements of this
-     * JSONObject.
-     * @return A JSONArray containing the key strings, or null if the JSONObject
-     * is empty.
+     * Produce a JSONArray containing the names of the elements of this JSONObject.
+     *
+     * @return A JSONArray containing the key strings, or null if the JSONObject is empty.
      */
     public JSONArray names() {
-        JSONArray ja = new JSONArray();
-        Enumeration  keys = keys();
+        final JSONArray ja = new JSONArray();
+        final Enumeration keys = keys();
         while (keys.hasMoreElements()) {
             ja.put(keys.nextElement());
         }
         return ja.length() == 0 ? null : ja;
     }
 
-    
     /**
      * Shave off trailing zeros and decimal point, if possible.
      */
@@ -594,12 +545,12 @@ public class JSONObject {
 
     /**
      * Produce a string from a Number.
-     * @param  n A Number
+     *
+     * @param n A Number
      * @return A String.
      * @throws JSONException If n is a non-finite number.
      */
-    static public String numberToString(Object n)
-            throws JSONException {
+    static public String numberToString(final Object n) throws JSONException {
         if (n == null) {
             throw new JSONException("Null pointer");
         }
@@ -609,213 +560,187 @@ public class JSONObject {
 
     /**
      * Get an optional value associated with a key.
-     * @param key   A key string.
-     * @return      An object which is the value, or null if there is no value.
+     *
+     * @param key A key string.
+     * @return An object which is the value, or null if there is no value.
      */
-    public Object opt(String key) {
-        return key == null ? null : this.myHashMap.get(key);
+    public Object opt(final String key) {
+        return key == null ? null : myHashMap.get(key);
     }
 
-
     /**
-     * Get an optional boolean associated with a key.
-     * It returns false if there is no such key, or if the value is not
-     * Boolean.TRUE or the String "true".
+     * Get an optional boolean associated with a key. It returns false if there is no such key, or if
+     * the value is not Boolean.TRUE or the String "true".
      *
-     * @param key   A key string.
-     * @return      The truth.
+     * @param key A key string.
+     * @return The truth.
      */
-    public boolean optBoolean(String key) {
+    public boolean optBoolean(final String key) {
         return optBoolean(key, false);
     }
 
-
     /**
-     * Get an optional boolean associated with a key.
-     * It returns the defaultValue if there is no such key, or if it is not
-     * a Boolean or the String "true" or "false" (case insensitive).
+     * Get an optional boolean associated with a key. It returns the defaultValue if there is no such
+     * key, or if it is not a Boolean or the String "true" or "false" (case insensitive).
      *
-     * @param key              A key string.
-     * @param defaultValue     The default.
-     * @return      The truth.
+     * @param key          A key string.
+     * @param defaultValue The default.
+     * @return The truth.
      */
-    public boolean optBoolean(String key, boolean defaultValue) {
+    public boolean optBoolean(final String key, final boolean defaultValue) {
         try {
             return getBoolean(key);
-        } catch (Exception e) {
+        } catch (final Exception e) {
             return defaultValue;
         }
     }
 
-    
     /**
-     * Put a key/value pair in the JSONObject, where the value will be a
-     * JSONArray which is produced from a Collection.
-     * @param key 	A key string.
-     * @param value	A Collection value.
-     * @return		this.
+     * Put a key/value pair in the JSONObject, where the value will be a JSONArray which is produced
+     * from a Collection.
+     *
+     * @param key   A key string.
+     * @param value A Collection value.
+     * @return this.
      * @throws JSONException
      */
-    public JSONObject put(String key, Vector value) throws JSONException {
+    public JSONObject put(final String key, final Vector value) throws JSONException {
         put(key, new JSONArray(value));
         return this;
     }
 
-    
     /**
-     * Get an optional double associated with a key,
-     * or NaN if there is no such key or if its value is not a number.
-     * If the value is a string, an attempt will be made to evaluate it as
-     * a number.
+     * Get an optional double associated with a key, or NaN if there is no such key or if its value is
+     * not a number. If the value is a string, an attempt will be made to evaluate it as a number.
      *
-     * @param key   A string which is the key.
-     * @return      An object which is the value.
+     * @param key A string which is the key.
+     * @return An object which is the value.
      */
-    public double optDouble(String key) {
+    public double optDouble(final String key) {
         return optDouble(key, Double.NaN);
     }
 
-
     /**
-     * Get an optional double associated with a key, or the
-     * defaultValue if there is no such key or if its value is not a number.
-     * If the value is a string, an attempt will be made to evaluate it as
-     * a number.
+     * Get an optional double associated with a key, or the defaultValue if there is no such key or if
+     * its value is not a number. If the value is a string, an attempt will be made to evaluate it as a
+     * number.
      *
-     * @param key   A key string.
-     * @param defaultValue     The default.
-     * @return      An object which is the value.
+     * @param key          A key string.
+     * @param defaultValue The default.
+     * @return An object which is the value.
      */
-    public double optDouble(String key, double defaultValue) {
+    public double optDouble(final String key, final double defaultValue) {
         try {
-            Object o = opt(key);
-            return Double.parseDouble((String)o);
-        } catch (Exception e) {
+            final Object o = opt(key);
+            return Double.parseDouble((String) o);
+        } catch (final Exception e) {
             return defaultValue;
         }
     }
 
-
     /**
-     * Get an optional int value associated with a key,
-     * or zero if there is no such key or if the value is not a number.
-     * If the value is a string, an attempt will be made to evaluate it as
-     * a number.
+     * Get an optional int value associated with a key, or zero if there is no such key or if the value
+     * is not a number. If the value is a string, an attempt will be made to evaluate it as a number.
      *
-     * @param key   A key string.
-     * @return      An object which is the value.
+     * @param key A key string.
+     * @return An object which is the value.
      */
-    public int optInt(String key) {
+    public int optInt(final String key) {
         return optInt(key, 0);
     }
 
-
     /**
-     * Get an optional int value associated with a key,
-     * or the default if there is no such key or if the value is not a number.
-     * If the value is a string, an attempt will be made to evaluate it as
-     * a number.
+     * Get an optional int value associated with a key, or the default if there is no such key or if the
+     * value is not a number. If the value is a string, an attempt will be made to evaluate it as a
+     * number.
      *
-     * @param key   A key string.
-     * @param defaultValue     The default.
-     * @return      An object which is the value.
+     * @param key          A key string.
+     * @param defaultValue The default.
+     * @return An object which is the value.
      */
-    public int optInt(String key, int defaultValue) {
+    public int optInt(final String key, final int defaultValue) {
         try {
             return getInt(key);
-        } catch (Exception e) {
+        } catch (final Exception e) {
             return defaultValue;
         }
     }
 
-
     /**
-     * Get an optional JSONArray associated with a key.
-     * It returns null if there is no such key, or if its value is not a
-     * JSONArray.
+     * Get an optional JSONArray associated with a key. It returns null if there is no such key, or if
+     * its value is not a JSONArray.
      *
-     * @param key   A key string.
-     * @return      A JSONArray which is the value.
+     * @param key A key string.
+     * @return A JSONArray which is the value.
      */
-    public JSONArray optJSONArray(String key) {
-        Object o = opt(key);
-        return o instanceof JSONArray ? (JSONArray)o : null;
+    public JSONArray optJSONArray(final String key) {
+        final Object o = opt(key);
+        return o instanceof JSONArray ? (JSONArray) o : null;
     }
 
-
     /**
-     * Get an optional JSONObject associated with a key.
-     * It returns null if there is no such key, or if its value is not a
-     * JSONObject.
+     * Get an optional JSONObject associated with a key. It returns null if there is no such key, or if
+     * its value is not a JSONObject.
      *
-     * @param key   A key string.
-     * @return      A JSONObject which is the value.
+     * @param key A key string.
+     * @return A JSONObject which is the value.
      */
-    public JSONObject optJSONObject(String key) {
-        Object o = opt(key);
-        return o instanceof JSONObject ? (JSONObject)o : null;
+    public JSONObject optJSONObject(final String key) {
+        final Object o = opt(key);
+        return o instanceof JSONObject ? (JSONObject) o : null;
     }
 
-
     /**
-     * Get an optional long value associated with a key,
-     * or zero if there is no such key or if the value is not a number.
-     * If the value is a string, an attempt will be made to evaluate it as
-     * a number.
+     * Get an optional long value associated with a key, or zero if there is no such key or if the value
+     * is not a number. If the value is a string, an attempt will be made to evaluate it as a number.
      *
-     * @param key   A key string.
-     * @return      An object which is the value.
+     * @param key A key string.
+     * @return An object which is the value.
      */
-    public long optLong(String key) {
+    public long optLong(final String key) {
         return optLong(key, 0);
     }
 
-
     /**
-     * Get an optional long value associated with a key,
-     * or the default if there is no such key or if the value is not a number.
-     * If the value is a string, an attempt will be made to evaluate it as
-     * a number.
+     * Get an optional long value associated with a key, or the default if there is no such key or if
+     * the value is not a number. If the value is a string, an attempt will be made to evaluate it as a
+     * number.
      *
-     * @param key   A key string.
-     * @param defaultValue     The default.
-     * @return      An object which is the value.
+     * @param key          A key string.
+     * @param defaultValue The default.
+     * @return An object which is the value.
      */
-    public long optLong(String key, long defaultValue) {
+    public long optLong(final String key, final long defaultValue) {
         try {
             return getLong(key);
-        } catch (Exception e) {
+        } catch (final Exception e) {
             return defaultValue;
         }
     }
 
-
     /**
-     * Get an optional string associated with a key.
-     * It returns an empty string if there is no such key. If the value is not
-     * a string and is not null, then it is coverted to a string.
+     * Get an optional string associated with a key. It returns an empty string if there is no such key.
+     * If the value is not a string and is not null, then it is coverted to a string.
      *
-     * @param key   A key string.
-     * @return      A string which is the value.
+     * @param key A key string.
+     * @return A string which is the value.
      */
-    public String optString(String key) {
+    public String optString(final String key) {
         return optString(key, "");
     }
 
-
     /**
-     * Get an optional string associated with a key.
-     * It returns the defaultValue if there is no such key.
+     * Get an optional string associated with a key. It returns the defaultValue if there is no such
+     * key.
      *
-     * @param key   A key string.
-     * @param defaultValue     The default.
-     * @return      A string which is the value.
+     * @param key          A key string.
+     * @param defaultValue The default.
+     * @return A string which is the value.
      */
-    public String optString(String key, String defaultValue) {
-        Object o = opt(key);
+    public String optString(final String key, final String defaultValue) {
+        final Object o = opt(key);
         return o != null ? o.toString() : defaultValue;
     }
-
 
     /**
      * Put a key/boolean pair in the JSONObject.
@@ -825,11 +750,10 @@ public class JSONObject {
      * @return this.
      * @throws JSONException If the key is null.
      */
-    public JSONObject put(String key, boolean value) throws JSONException {
+    public JSONObject put(final String key, final boolean value) throws JSONException {
         put(key, value ? Boolean.TRUE : Boolean.FALSE);
         return this;
     }
-
 
     /**
      * Put a key/double pair in the JSONObject.
@@ -839,11 +763,10 @@ public class JSONObject {
      * @return this.
      * @throws JSONException If the key is null or if the number is invalid.
      */
-    public JSONObject put(String key, double value) throws JSONException {
-        put(key, new Double(value));
+    public JSONObject put(final String key, final double value) throws JSONException {
+        put(key, Double.valueOf(value));
         return this;
     }
-
 
     /**
      * Put a key/int pair in the JSONObject.
@@ -853,11 +776,10 @@ public class JSONObject {
      * @return this.
      * @throws JSONException If the key is null.
      */
-    public JSONObject put(String key, int value) throws JSONException {
-        put(key, new Integer(value));
+    public JSONObject put(final String key, final int value) throws JSONException {
+        put(key, Integer.valueOf(value));
         return this;
     }
-
 
     /**
      * Put a key/long pair in the JSONObject.
@@ -867,88 +789,83 @@ public class JSONObject {
      * @return this.
      * @throws JSONException If the key is null.
      */
-    public JSONObject put(String key, long value) throws JSONException {
-        put(key, new Long(value));
+    public JSONObject put(final String key, final long value) throws JSONException {
+        put(key, Long.valueOf(value));
         return this;
     }
 
-     
     /**
-     * Put a key/value pair in the JSONObject, where the value will be a
-     * JSONObject which is produced from a Map.
-     * @param key 	A key string.
-     * @param value	A Map value.
-     * @return		this.
+     * Put a key/value pair in the JSONObject, where the value will be a JSONObject which is produced
+     * from a Map.
+     *
+     * @param key   A key string.
+     * @param value A Map value.
+     * @return this.
      * @throws JSONException
      */
-    public JSONObject put(String key, Hashtable value) throws JSONException {
+    public JSONObject put(final String key, final Hashtable value) throws JSONException {
         put(key, new JSONObject(value));
         return this;
     }
-    
-    
+
     /**
-     * Put a key/value pair in the JSONObject. If the value is null,
-     * then the key will be removed from the JSONObject if it is present.
+     * Put a key/value pair in the JSONObject. If the value is null, then the key will be removed from
+     * the JSONObject if it is present.
+     *
      * @param key   A key string.
-     * @param value An object which is the value. It should be of one of these
-     *  types: Boolean, Double, Integer, JSONArray, JSONObject, Long, String,
-     *  or the JSONObject.NULL object.
+     * @param value An object which is the value. It should be of one of these types: Boolean, Double,
+     *              Integer, JSONArray, JSONObject, Long, String, or the JSONObject.NULL object.
      * @return this.
-     * @throws JSONException If the value is non-finite number
-     *  or if the key is null.
+     * @throws JSONException If the value is non-finite number or if the key is null.
      */
-    public JSONObject put(String key, Object value) throws JSONException {
+    public JSONObject put(final String key, final Object value) throws JSONException {
         if (key == null) {
             throw new JSONException("Null key.");
         }
         if (value != null) {
             testValidity(value);
-            this.myHashMap.put(key, value);
+            myHashMap.put(key, value);
         } else {
             remove(key);
         }
         return this;
     }
 
-
     /**
-     * Put a key/value pair in the JSONObject, but only if the
-     * key and the value are both non-null.
+     * Put a key/value pair in the JSONObject, but only if the key and the value are both non-null.
+     *
      * @param key   A key string.
-     * @param value An object which is the value. It should be of one of these
-     *  types: Boolean, Double, Integer, JSONArray, JSONObject, Long, String,
-     *  or the JSONObject.NULL object.
+     * @param value An object which is the value. It should be of one of these types: Boolean, Double,
+     *              Integer, JSONArray, JSONObject, Long, String, or the JSONObject.NULL object.
      * @return this.
      * @throws JSONException If the value is a non-finite number.
      */
-    public JSONObject putOpt(String key, Object value) throws JSONException {
+    public JSONObject putOpt(final String key, final Object value) throws JSONException {
         if (key != null && value != null) {
             put(key, value);
         }
         return this;
     }
 
-
     /**
-     * Produce a string in double quotes with backslash sequences in all the
-     * right places. A backslash will be inserted within </, allowing JSON
-     * text to be delivered in HTML. In JSON text, a string cannot contain a
-     * control character or an unescaped quote or backslash.
+     * Produce a string in double quotes with backslash sequences in all the right places. A backslash
+     * will be inserted within </, allowing JSON text to be delivered in HTML. In JSON text, a string
+     * cannot contain a control character or an unescaped quote or backslash.
+     *
      * @param string A String
-     * @return  A String correctly formatted for insertion in a JSON text.
+     * @return A String correctly formatted for insertion in a JSON text.
      */
-    public static String quote(String string) {
+    public static String quote(final String string) {
         if (string == null || string.length() == 0) {
             return "\"\"";
         }
 
-        char         b;
-        char         c = 0;
-        int          i;
-        int          len = string.length();
-        StringBuffer sb = new StringBuffer(len + 4);
-        String       t;
+        char b;
+        char c = 0;
+        int i;
+        final int len = string.length();
+        final StringBuilder sb = new StringBuilder(len + 4);
+        String t;
 
         sb.append('"');
         for (i = 0; i < len; i += 1) {
@@ -996,136 +913,127 @@ public class JSONObject {
 
     /**
      * Remove a name and its value, if present.
+     *
      * @param key The name to be removed.
-     * @return The value that was associated with the name,
-     * or null if there was no value.
+     * @return The value that was associated with the name, or null if there was no value.
      */
-    public Object remove(String key) {
-        return this.myHashMap.remove(key);
+    public Object remove(final String key) {
+        return myHashMap.remove(key);
     }
-
 
     /**
      * Throw an exception if the object is an NaN or infinite number.
+     *
      * @param o The object to test.
      * @throws JSONException If o is a non-finite number.
      */
-    static void testValidity(Object o) throws JSONException {
+    static void testValidity(final Object o) throws JSONException {
         if (o != null) {
             if (o instanceof Double) {
-                if (((Double)o).isInfinite() || ((Double)o).isNaN()) {
-                    throw new JSONException(
-                        "JSON does not allow non-finite numbers");
+                if (((Double) o).isInfinite() || ((Double) o).isNaN()) {
+                    throw new JSONException("JSON does not allow non-finite numbers");
                 }
             } else if (o instanceof Float) {
-                if (((Float)o).isInfinite() || ((Float)o).isNaN()) {
-                    throw new JSONException(
-                        "JSON does not allow non-finite numbers.");
+                if (((Float) o).isInfinite() || ((Float) o).isNaN()) {
+                    throw new JSONException("JSON does not allow non-finite numbers.");
                 }
             }
         }
     }
 
-
     /**
-     * Produce a JSONArray containing the values of the members of this
-     * JSONObject.
-     * @param names A JSONArray containing a list of key strings. This
-     * determines the sequence of the values in the result.
+     * Produce a JSONArray containing the values of the members of this JSONObject.
+     *
+     * @param names A JSONArray containing a list of key strings. This determines the sequence of the
+     *              values in the result.
      * @return A JSONArray of values.
      * @throws JSONException If any of the values are non-finite numbers.
      */
-    public JSONArray toJSONArray(JSONArray names) throws JSONException {
+    public JSONArray toJSONArray(final JSONArray names) throws JSONException {
         if (names == null || names.length() == 0) {
             return null;
         }
-        JSONArray ja = new JSONArray();
+        final JSONArray ja = new JSONArray();
         for (int i = 0; i < names.length(); i += 1) {
-            ja.put(this.opt(names.getString(i)));
+            ja.put(opt(names.getString(i)));
         }
         return ja;
     }
 
     /**
-     * Make a JSON text of this JSONObject. For compactness, no whitespace
-     * is added. If this would not result in a syntactically correct JSON text,
-     * then null will be returned instead.
+     * Make a JSON text of this JSONObject. For compactness, no whitespace is added. If this would not
+     * result in a syntactically correct JSON text, then null will be returned instead.
      * <p>
      * Warning: This method assumes that the data structure is acyclical.
      *
-     * @return a printable, displayable, portable, transmittable
-     *  representation of the object, beginning
-     *  with <code>{</code>&nbsp;<small>(left brace)</small> and ending
-     *  with <code>}</code>&nbsp;<small>(right brace)</small>.
+     * @return a printable, displayable, portable, transmittable representation of the object, beginning
+     *         with <code>{</code>&nbsp;<small>(left brace)</small> and ending with
+     *         <code>}</code>&nbsp;<small>(right brace)</small>.
      */
+    @Override
     public String toString() {
         try {
-            Enumeration keys = keys();
-            StringBuffer sb = new StringBuffer("{");
+            final Enumeration keys = keys();
+            final StringBuilder sb = new StringBuilder("{");
 
             while (keys.hasMoreElements()) {
                 if (sb.length() > 1) {
                     sb.append(',');
                 }
-                Object o = keys.nextElement();
+                final Object o = keys.nextElement();
                 sb.append(quote(o.toString()));
                 sb.append(':');
-                sb.append(valueToString(this.myHashMap.get(o)));
+                sb.append(valueToString(myHashMap.get(o)));
             }
             sb.append('}');
             return sb.toString();
-        } catch (Exception e) {
+        } catch (final Exception e) {
             return null;
         }
     }
 
-
     /**
      * Make a prettyprinted JSON text of this JSONObject.
      * <p>
      * Warning: This method assumes that the data structure is acyclical.
-     * @param indentFactor The number of spaces to add to each level of
-     *  indentation.
-     * @return a printable, displayable, portable, transmittable
-     *  representation of the object, beginning
-     *  with <code>{</code>&nbsp;<small>(left brace)</small> and ending
-     *  with <code>}</code>&nbsp;<small>(right brace)</small>.
+     *
+     * @param indentFactor The number of spaces to add to each level of indentation.
+     * @return a printable, displayable, portable, transmittable representation of the object, beginning
+     *         with <code>{</code>&nbsp;<small>(left brace)</small> and ending with
+     *         <code>}</code>&nbsp;<small>(right brace)</small>.
      * @throws JSONException If the object contains an invalid number.
      */
-    public String toString(int indentFactor) throws JSONException {
+    public String toString(final int indentFactor) throws JSONException {
         return toString(indentFactor, 0);
     }
 
-
     /**
      * Make a prettyprinted JSON text of this JSONObject.
      * <p>
      * Warning: This method assumes that the data structure is acyclical.
-     * @param indentFactor The number of spaces to add to each level of
-     *  indentation.
-     * @param indent The indentation of the top level.
-     * @return a printable, displayable, transmittable
-     *  representation of the object, beginning
-     *  with <code>{</code>&nbsp;<small>(left brace)</small> and ending
-     *  with <code>}</code>&nbsp;<small>(right brace)</small>.
+     *
+     * @param indentFactor The number of spaces to add to each level of indentation.
+     * @param indent       The indentation of the top level.
+     * @return a printable, displayable, transmittable representation of the object, beginning with
+     *         <code>{</code>&nbsp;<small>(left brace)</small> and ending with
+     *         <code>}</code>&nbsp;<small>(right brace)</small>.
      * @throws JSONException If the object contains an invalid number.
      */
-    String toString(int indentFactor, int indent) throws JSONException {
-        int          i;
-        int          n = length();
+    String toString(final int indentFactor, final int indent) throws JSONException {
+        int i;
+        final int n = length();
         if (n == 0) {
             return "{}";
         }
-        Enumeration keys = keys();
-        StringBuffer sb = new StringBuffer("{");
-        int          newindent = indent + indentFactor;
-        Object       o;
+        final Enumeration keys = keys();
+        final StringBuilder sb = new StringBuilder("{");
+        final int newindent = indent + indentFactor;
+        Object o;
         if (n == 1) {
             o = keys.nextElement();
             sb.append(quote(o.toString()));
             sb.append(": ");
-            sb.append(valueToString(this.myHashMap.get(o), indentFactor,
-                    indent));
+            sb.append(valueToString(myHashMap.get(o), indentFactor, indent));
         } else {
             while (keys.hasMoreElements()) {
                 o = keys.nextElement();
@@ -1139,8 +1047,7 @@ public class JSONObject {
                 }
                 sb.append(quote(o.toString()));
                 sb.append(": ");
-                sb.append(valueToString(this.myHashMap.get(o), indentFactor,
-                        newindent));
+                sb.append(valueToString(myHashMap.get(o), indentFactor, newindent));
             }
             if (sb.length() > 1) {
                 sb.append('\n');
@@ -1153,126 +1060,116 @@ public class JSONObject {
         return sb.toString();
     }
 
-
     /**
-     * Make a JSON text of an Object value. If the object has an
-     * value.toJSONString() method, then that method will be used to produce
-     * the JSON text. The method is required to produce a strictly
-     * conforming text. If the object does not contain a toJSONString
-     * method (which is the most common case), then a text will be
-     * produced by the rules.
+     * Make a JSON text of an Object value. If the object has an value.toJSONString() method, then that
+     * method will be used to produce the JSON text. The method is required to produce a strictly
+     * conforming text. If the object does not contain a toJSONString method (which is the most common
+     * case), then a text will be produced by the rules.
      * <p>
      * Warning: This method assumes that the data structure is acyclical.
+     *
      * @param value The value to be serialized.
-     * @return a printable, displayable, transmittable
-     *  representation of the object, beginning
-     *  with <code>{</code>&nbsp;<small>(left brace)</small> and ending
-     *  with <code>}</code>&nbsp;<small>(right brace)</small>.
+     * @return a printable, displayable, transmittable representation of the object, beginning with
+     *         <code>{</code>&nbsp;<small>(left brace)</small> and ending with
+     *         <code>}</code>&nbsp;<small>(right brace)</small>.
      * @throws JSONException If the value is or contains an invalid number.
      */
-    static String valueToString(Object value) throws JSONException {
+    static String valueToString(final Object value) throws JSONException {
         if (value == null || value.equals(null)) {
             return "null";
         }
         if (value instanceof JSONString) {
-        	Object o;
-        	try {
-            	o = ((JSONString)value).toJSONString();
-            } catch (Exception e) {
-            	throw new JSONException(e);
+            Object o;
+            try {
+                o = ((JSONString) value).toJSONString();
+            } catch (final Exception e) {
+                throw new JSONException(e);
             }
             if (o instanceof String) {
-	        	return (String)o;
-	        }
+                return (String) o;
+            }
             throw new JSONException("Bad value from toJSONString: " + o);
         }
-        if (value instanceof Float || value instanceof Double ||
-            value instanceof Byte || value instanceof Short || 
-            value instanceof Integer || value instanceof Long) {
+        if (value instanceof Float || value instanceof Double || value instanceof Byte || value instanceof Short || value instanceof Integer
+                || value instanceof Long) {
             return numberToString(value);
         }
-        if (value instanceof Boolean || value instanceof JSONObject ||
-                value instanceof JSONArray) {
+        if (value instanceof Boolean || value instanceof JSONObject || value instanceof JSONArray) {
             return value.toString();
         }
         return quote(value.toString());
     }
 
-
     /**
      * Make a prettyprinted JSON text of an object value.
      * <p>
      * Warning: This method assumes that the data structure is acyclical.
-     * @param value The value to be serialized.
-     * @param indentFactor The number of spaces to add to each level of
-     *  indentation.
-     * @param indent The indentation of the top level.
-     * @return a printable, displayable, transmittable
-     *  representation of the object, beginning
-     *  with <code>{</code>&nbsp;<small>(left brace)</small> and ending
-     *  with <code>}</code>&nbsp;<small>(right brace)</small>.
+     *
+     * @param value        The value to be serialized.
+     * @param indentFactor The number of spaces to add to each level of indentation.
+     * @param indent       The indentation of the top level.
+     * @return a printable, displayable, transmittable representation of the object, beginning with
+     *         <code>{</code>&nbsp;<small>(left brace)</small> and ending with
+     *         <code>}</code>&nbsp;<small>(right brace)</small>.
      * @throws JSONException If the object contains an invalid number.
      */
-     static String valueToString(Object value, int indentFactor, int indent)
-            throws JSONException {
+    static String valueToString(final Object value, final int indentFactor, final int indent) throws JSONException {
         if (value == null || value.equals(null)) {
             return "null";
         }
         try {
-	        if (value instanceof JSONString) {
-		        Object o = ((JSONString)value).toJSONString();
-		        if (o instanceof String) {
-		        	return (String)o;
-		        }
-	        }
-        } catch (Exception e) {
-        	/* forget about it */
+            if (value instanceof JSONString) {
+                final Object o = ((JSONString) value).toJSONString();
+                if (o instanceof String) {
+                    return (String) o;
+                }
+            }
+        } catch (final Exception e) {
+            /* forget about it */
         }
-        if (value instanceof Float || value instanceof Double ||
-            value instanceof Byte || value instanceof Short || 
-            value instanceof Integer || value instanceof Long) {
+        if (value instanceof Float || value instanceof Double || value instanceof Byte || value instanceof Short || value instanceof Integer
+                || value instanceof Long) {
             return numberToString(value);
         }
         if (value instanceof Boolean) {
             return value.toString();
         }
         if (value instanceof JSONObject) {
-            return ((JSONObject)value).toString(indentFactor, indent);
+            return ((JSONObject) value).toString(indentFactor, indent);
         }
         if (value instanceof JSONArray) {
-            return ((JSONArray)value).toString(indentFactor, indent);
+            return ((JSONArray) value).toString(indentFactor, indent);
         }
         return quote(value.toString());
     }
 
-
-     /**
-      * Write the contents of the JSONObject as JSON text to a writer.
-      * For compactness, no whitespace is added.
-      * <p>
-      * Warning: This method assumes that the data structure is acyclical.
-      *
-      * @return The writer.
-      * @throws JSONException
-      */
-     public Writer write(Writer writer) throws JSONException {
+    /**
+     * Write the contents of the JSONObject as JSON text to a writer. For compactness, no whitespace is
+     * added.
+     * <p>
+     * Warning: This method assumes that the data structure is acyclical.
+     *
+     * @return The writer.
+     * @throws JSONException
+     */
+    public Writer write(final Writer writer) throws JSONException {
         try {
-            boolean  b = false;
-            Enumeration keys = keys();
+            boolean b = false;
+            final Enumeration keys = keys();
             writer.write('{');
 
             while (keys.hasMoreElements()) {
                 if (b) {
                     writer.write(',');
                 }
-                Object k = keys.nextElement();
+                final Object k = keys.nextElement();
                 writer.write(quote(k.toString()));
                 writer.write(':');
-                Object v = this.myHashMap.get(k);
+                final Object v = myHashMap.get(k);
                 if (v instanceof JSONObject) {
-                    ((JSONObject)v).write(writer);
+                    ((JSONObject) v).write(writer);
                 } else if (v instanceof JSONArray) {
-                    ((JSONArray)v).write(writer);
+                    ((JSONArray) v).write(writer);
                 } else {
                     writer.write(valueToString(v));
                 }
@@ -1280,8 +1177,8 @@ public class JSONObject {
             }
             writer.write('}');
             return writer;
-        } catch (IOException e) {
+        } catch (final IOException e) {
             throw new JSONException(e);
         }
-     }
+    }
 }
