@@ -25,9 +25,9 @@ SOFTWARE.
 */
 
 /**
- * A JSONTokener takes a source string and extracts characters and tokens from
- * it. It is used by the JSONObject and JSONArray constructors to parse
- * JSON source strings.
+ * A JSONTokener takes a source string and extracts characters and tokens from it. It is used by the
+ * JSONObject and JSONArray constructors to parse JSON source strings.
+ *
  * @author JSON.org
  * @version 2
  */
@@ -38,44 +38,38 @@ public class JSONTokener {
      */
     private int myIndex;
 
-
     /**
      * The source string being tokenized.
      */
-    private String mySource;
-
+    private final String mySource;
 
     /**
      * Construct a JSONTokener from a string.
      *
-     * @param s     A source string.
+     * @param s A source string.
      */
-    public JSONTokener(String s) {
-        this.myIndex = 0;
-        this.mySource = s;
+    public JSONTokener(final String s) {
+        myIndex = 0;
+        mySource = s;
     }
 
-
     /**
-     * Back up one character. This provides a sort of lookahead capability,
-     * so that you can test for a digit or letter before attempting to parse
-     * the next number or identifier.
+     * Back up one character. This provides a sort of lookahead capability, so that you can test for a
+     * digit or letter before attempting to parse the next number or identifier.
      */
     public void back() {
-        if (this.myIndex > 0) {
-            this.myIndex -= 1;
+        if (myIndex > 0) {
+            myIndex -= 1;
         }
     }
 
-
-
     /**
      * Get the hex value of a character (base16).
-     * @param c A character between '0' and '9' or between 'A' and 'F' or
-     * between 'a' and 'f'.
-     * @return  An int between 0 and 15, or -1 if c was not a hex digit.
+     *
+     * @param c A character between '0' and '9' or between 'A' and 'F' or between 'a' and 'f'.
+     * @return An int between 0 and 15, or -1 if c was not a hex digit.
      */
-    public static int dehexchar(char c) {
+    public static int dehexchar(final char c) {
         if (c >= '0' && c <= '9') {
             return c - '0';
         }
@@ -88,16 +82,14 @@ public class JSONTokener {
         return -1;
     }
 
-
     /**
-     * Determine if the source string still contains characters that next()
-     * can consume.
+     * Determine if the source string still contains characters that next() can consume.
+     *
      * @return true if not yet at the end of the source.
      */
     public boolean more() {
-        return this.myIndex < this.mySource.length();
+        return myIndex < mySource.length();
     }
-
 
     /**
      * Get the next character in the source string.
@@ -106,56 +98,52 @@ public class JSONTokener {
      */
     public char next() {
         if (more()) {
-            char c = this.mySource.charAt(this.myIndex);
-            this.myIndex += 1;
+            final char c = mySource.charAt(myIndex);
+            myIndex += 1;
             return c;
         }
         return 0;
     }
 
-
     /**
-     * Consume the next character, and check that it matches a specified
-     * character.
+     * Consume the next character, and check that it matches a specified character.
+     *
      * @param c The character to match.
      * @return The character.
      * @throws JSONException if the character does not match.
      */
-    public char next(char c) throws JSONException {
-        char n = next();
+    public char next(final char c) throws JSONException {
+        final char n = next();
         if (n != c) {
-            throw syntaxError("Expected '" + c + "' and instead saw '" +
-                    n + "'.");
+            throw syntaxError("Expected '" + c + "' and instead saw '" + n + "'.");
         }
         return n;
     }
 
-
     /**
      * Get the next n characters.
      *
-     * @param n     The number of characters to take.
-     * @return      A string of n characters.
-     * @throws JSONException
-     *   Substring bounds error if there are not
-     *   n characters remaining in the source string.
+     * @param n The number of characters to take.
+     * @return A string of n characters.
+     * @throws JSONException Substring bounds error if there are not n characters remaining in the
+     *                       source string.
      */
-     public String next(int n) throws JSONException {
-         int i = this.myIndex;
-         int j = i + n;
-         if (j >= this.mySource.length()) {
+    public String next(final int n) throws JSONException {
+        final int i = myIndex;
+        final int j = i + n;
+        if (j >= mySource.length()) {
             throw syntaxError("Substring bounds error");
-         }
-         this.myIndex += n;
-         return this.mySource.substring(i, j);
-     }
-
+        }
+        myIndex += n;
+        return mySource.substring(i, j);
+    }
 
     /**
-     * Get the next char in the string, skipping whitespace
-     * and comments (slashslash, slashstar, and hash).
+     * Get the next char in the string, skipping whitespace and comments (slashslash, slashstar, and
+     * hash).
+     *
      * @throws JSONException
-     * @return  A character, or 0 if there are no more characters.
+     * @return A character, or 0 if there are no more characters.
      */
     public char nextClean() throws JSONException {
         for (;;) {
@@ -195,21 +183,19 @@ public class JSONTokener {
         }
     }
 
-
     /**
-     * Return the characters up to the next close quote character.
-     * Backslash processing is done. The formal JSON format does not
-     * allow strings in single quotes, but an implementation is allowed to
+     * Return the characters up to the next close quote character. Backslash processing is done. The
+     * formal JSON format does not allow strings in single quotes, but an implementation is allowed to
      * accept them.
-     * @param quote The quoting character, either
-     *      <code>"</code>&nbsp;<small>(double quote)</small> or
-     *      <code>'</code>&nbsp;<small>(single quote)</small>.
-     * @return      A String.
+     *
+     * @param quote The quoting character, either <code>"</code>&nbsp;<small>(double quote)</small> or
+     *              <code>'</code>&nbsp;<small>(single quote)</small>.
+     * @return A String.
      * @throws JSONException Unterminated string.
      */
-    public String nextString(char quote) throws JSONException {
+    public String nextString(final char quote) throws JSONException {
         char c;
-        StringBuffer sb = new StringBuffer();
+        final StringBuilder sb = new StringBuilder();
         for (;;) {
             c = next();
             switch (c) {
@@ -236,9 +222,9 @@ public class JSONTokener {
                     sb.append('\r');
                     break;
                 case 'u':
-                    sb.append((char)Integer.parseInt(next(4), 16));
+                    sb.append((char) Integer.parseInt(next(4), 16));
                     break;
-                case 'x' :
+                case 'x':
                     sb.append((char) Integer.parseInt(next(2), 16));
                     break;
                 default:
@@ -254,17 +240,17 @@ public class JSONTokener {
         }
     }
 
-
     /**
-     * Get the text up but not including the specified character or the
-     * end of line, whichever comes first.
-     * @param  d A delimiter character.
-     * @return   A string.
+     * Get the text up but not including the specified character or the end of line, whichever comes
+     * first.
+     *
+     * @param d A delimiter character.
+     * @return A string.
      */
-    public String nextTo(char d) {
-        StringBuffer sb = new StringBuffer();
+    public String nextTo(final char d) {
+        final StringBuilder sb = new StringBuilder();
         for (;;) {
-            char c = next();
+            final char c = next();
             if (c == d || c == 0 || c == '\n' || c == '\r') {
                 if (c != 0) {
                     back();
@@ -275,20 +261,19 @@ public class JSONTokener {
         }
     }
 
-
     /**
-     * Get the text up but not including one of the specified delimeter
-     * characters or the end of line, whichever comes first.
+     * Get the text up but not including one of the specified delimeter characters or the end of line,
+     * whichever comes first.
+     *
      * @param delimiters A set of delimiter characters.
      * @return A string, trimmed.
      */
-    public String nextTo(String delimiters) {
+    public String nextTo(final String delimiters) {
         char c;
-        StringBuffer sb = new StringBuffer();
+        final StringBuilder sb = new StringBuilder();
         for (;;) {
             c = next();
-            if (delimiters.indexOf(c) >= 0 || c == 0 ||
-                    c == '\n' || c == '\r') {
+            if (delimiters.indexOf(c) >= 0 || c == 0 || c == '\n' || c == '\r') {
                 if (c != 0) {
                     back();
                 }
@@ -298,10 +283,10 @@ public class JSONTokener {
         }
     }
 
-
     /**
-     * Get the next value. The value can be a Boolean, Double, Integer,
-     * JSONArray, JSONObject, Long, or String, or the JSONObject.NULL object.
+     * Get the next value. The value can be a Boolean, Double, Integer, JSONArray, JSONObject, Long, or
+     * String, or the JSONObject.NULL object.
+     *
      * @throws JSONException If syntax error.
      *
      * @return An object.
@@ -311,28 +296,26 @@ public class JSONTokener {
         String s;
 
         switch (c) {
-            case '"':
-            case '\'':
-                return nextString(c);
-            case '{':
-                back();
-                return new JSONObject(this);
-            case '[':
-                back();
-                return new JSONArray(this);
+        case '"':
+        case '\'':
+            return nextString(c);
+        case '{':
+            back();
+            return new JSONObject(this);
+        case '[':
+            back();
+            return new JSONArray(this);
         }
 
         /*
-         * Handle unquoted text. This could be the values true, false, or
-         * null, or it can be a number. An implementation (such as this one)
-         * is allowed to also accept non-standard forms.
+         * Handle unquoted text. This could be the values true, false, or null, or it can be a number. An
+         * implementation (such as this one) is allowed to also accept non-standard forms.
          *
-         * Accumulate characters until we reach the end of the text or a
-         * formatting character.
+         * Accumulate characters until we reach the end of the text or a formatting character.
          */
 
-        StringBuffer sb = new StringBuffer();
-        char b = c;
+        final StringBuilder sb = new StringBuilder();
+        final char b = c;
         while (c >= ' ' && ",:]}/\\\"[{;=#".indexOf(c) < 0) {
             sb.append(c);
             c = next();
@@ -358,40 +341,37 @@ public class JSONTokener {
         }
 
         /*
-         * If it might be a number, try converting it. We support the 0- and 0x-
-         * conventions. If a number cannot be produced, then the value will just
-         * be a string. Note that the 0-, 0x-, plus, and implied string
-         * conventions are non-standard. A JSON parser is free to accept
-         * non-JSON forms as long as it accepts all correct JSON forms.
+         * If it might be a number, try converting it. We support the 0- and 0x- conventions. If a number
+         * cannot be produced, then the value will just be a string. Note that the 0-, 0x-, plus, and
+         * implied string conventions are non-standard. A JSON parser is free to accept non-JSON forms as
+         * long as it accepts all correct JSON forms.
          */
 
-        if ((b >= '0' && b <= '9') || b == '.' || b == '-' || b == '+') {
+        if (b >= '0' && b <= '9' || b == '.' || b == '-' || b == '+') {
             if (b == '0') {
-                if (s.length() > 2 &&
-                        (s.charAt(1) == 'x' || s.charAt(1) == 'X')) {
+                if (s.length() > 2 && (s.charAt(1) == 'x' || s.charAt(1) == 'X')) {
                     try {
-                        return new Integer(Integer.parseInt(s.substring(2),
-                                16));
-                    } catch (Exception e) {
+                        return Integer.valueOf(Integer.parseInt(s.substring(2), 16));
+                    } catch (final Exception e) {
                         /* Ignore the error */
                     }
                 } else {
                     try {
-                        return new Integer(Integer.parseInt(s, 8));
-                    } catch (Exception e) {
+                        return Integer.valueOf(Integer.parseInt(s, 8));
+                    } catch (final Exception e) {
                         /* Ignore the error */
                     }
                 }
             }
             try {
                 return Integer.valueOf(s);
-            } catch (Exception e) {
+            } catch (final Exception e) {
                 try {
-                    return new Long(Long.parseLong(s));
-                } catch (Exception f) {
+                    return Long.valueOf(Long.parseLong(s));
+                } catch (final Exception f) {
                     try {
                         return Double.valueOf(s);
-                    }  catch (Exception g) {
+                    } catch (final Exception g) {
                         return s;
                     }
                 }
@@ -400,21 +380,20 @@ public class JSONTokener {
         return s;
     }
 
-
     /**
-     * Skip characters until the next character is the requested character.
-     * If the requested character is not found, no characters are skipped.
+     * Skip characters until the next character is the requested character. If the requested character
+     * is not found, no characters are skipped.
+     *
      * @param to A character to skip to.
-     * @return The requested character, or zero if the requested character
-     * is not found.
+     * @return The requested character, or zero if the requested character is not found.
      */
-    public char skipTo(char to) {
+    public char skipTo(final char to) {
         char c;
-        int index = this.myIndex;
+        final int index = myIndex;
         do {
             c = next();
             if (c == 0) {
-                this.myIndex = index;
+                myIndex = index;
                 return c;
             }
         } while (c != to);
@@ -422,39 +401,38 @@ public class JSONTokener {
         return c;
     }
 
-
     /**
-     * Skip characters until past the requested string.
-     * If it is not found, we are left at the end of the source.
+     * Skip characters until past the requested string. If it is not found, we are left at the end of
+     * the source.
+     *
      * @param to A string to skip past.
      */
-    public void skipPast(String to) {
-        this.myIndex = this.mySource.indexOf(to, this.myIndex);
-        if (this.myIndex < 0) {
-            this.myIndex = this.mySource.length();
+    public void skipPast(final String to) {
+        myIndex = mySource.indexOf(to, myIndex);
+        if (myIndex < 0) {
+            myIndex = mySource.length();
         } else {
-            this.myIndex += to.length();
+            myIndex += to.length();
         }
     }
-
 
     /**
      * Make a JSONException to signal a syntax error.
      *
      * @param message The error message.
-     * @return  A JSONException object, suitable for throwing
+     * @return A JSONException object, suitable for throwing
      */
-    public JSONException syntaxError(String message) {
+    public JSONException syntaxError(final String message) {
         return new JSONException(message + toString());
     }
-
 
     /**
      * Make a printable string of this JSONTokener.
      *
      * @return " at character [this.myIndex] of [this.mySource]"
      */
+    @Override
     public String toString() {
-        return " at character " + this.myIndex + " of " + this.mySource;
+        return " at character " + myIndex + " of " + mySource;
     }
 }
